[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [{email = 'david.asal@hotmail.com', name = 'David Salazar'}]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = ['beautifulsoup4', 'requests']
description = 'Python Client wrapper for Steam API.'
keywords = ['api', 'python', 'steam community', 'steam', 'steamapi']
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'python-steam-api'
readme = 'README.md'
requires-python = '>=3.9'
version = '2.2.0'

[project.optional-dependencies]
all = ['python-steam-api[build]', 'python-steam-api[style]']
build = ['build', 'twine']
full = ['python-steam-api[all]']
style = [
  'codespell[toml]>=2.2.4',
  'isort',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]

[project.urls]
source = 'https://github.com/deivit24/python-steam-api'
tracker = 'https://github.com/deivit24/python-steam-api/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache'

[tool.isort]
extend_skip_glob = []
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.ruff]
extend-exclude = []
line-length = 120
target-version = 'py39'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'E', 'F', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B006', # do not use mutable data structures for argument default
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'UP007', # 'Use `X | Y` for type annotations', requires python 3.10
]
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['steam_web_api*tests']
include = ['steam_web_api*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
